Add proper auth and login to user service using jsonwebtoken npm library. Update openapi.yaml to use new login function from our user controller. Write unit tests for new functions within user service and user controller. Add test_helpers for instantiating generic users during testing.
